Fixed navbar/fotter render on mobile

--- a/spe.css
+++ b/spe.css
@@ -19,7 +19,6 @@ body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 5vh;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -31,14 +30,21 @@ body {
 }
 
 .navbarlogo {
+	display: flex;
+	justify-content: center;
+	align-self: center;
 	padding-left: 10px;
 	padding-top: 3px;
 	z-index: 5;
 }
 
+.navbarlinksflex {
+}
+
 .navbaritem {
 	display: inline-block;
 	text-align: center;
+	justify-content: center;
 	font-family: monospace;
 	color: #FF0000;
 	font-size: 20px;
@@ -47,8 +53,19 @@ body {
 	
 }
 
-.navbarbutton {
+.navbaritemseparator {
 	display: inline-block;
+	text-align: center;
+	justify-content: center;
+	font-family: monospace;
+	color: #FF0000;
+	font-size: 20px;
+	text-decoration: none;
+	z-index: 5;
+}
+
+.navbarbutton {
+	display: flex;
 	padding-right: 5px;
 	text-align: center;
 	font-family: monospace;
@@ -63,8 +80,10 @@ body {
 
 }
 
-.sitewrapper {
-	position: static;
+.layers {
+	position: relative;
+	z-inderx: 5;
+
 }
 
 .foreground {
@@ -84,7 +103,7 @@ body {
 	height: 100vh;
 	background-color: transparent;
 	width: 1px;
-	z-index: 2;
+	z-index: 10;
 }
 
 .blackforegroundright {
@@ -95,59 +114,17 @@ body {
 	z-index: 2;
 }
 
-.solid-red {
+.backgroundgradient {
+	display: flex;
+	align-items: center;
 	width: 100%;
 	height: 100vh;
-	background-color: #FF0000;
 }
 
-.red-to-yellow {
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to bottom, #FF0000, yellow);
-}
-
-.solid-yellow {
-	width: 100%;
-	height: 100vh;
-	background-color: yellow;
-}
-
-.yellow-to-blue {
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to bottom, yellow, #00AEEF);
-}
-
-.solid-blue {
-	width: 100%;
-	height: 100vh;
-	background-color: #00AEEF;
-}
-
-.blue-to-green {
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to bottom, #00AEEF, #00FF00);
-}
-
-.solid-green {
-	width: 100%;
-	height: 100vh;
-	background-color: #00FF00;
-}
-
-.green-to-red {
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to bottom, #00FF00, #FF0000);
-}
-
-.firstflex {
+.flexcontainer {
 	position: absolute; 
 	scroll-snap-align: center;
 	scroll-behavior: smooth;
-	top: 40%;
 	left: 0;
 	width: 100%;
 	display: flex;
@@ -158,11 +135,12 @@ body {
 	background-size: contain:
     	background-repeat: no-repeat;
 	background-position: center;
-	z-index: 4;
+	z-index: 3;
 }
 
-.firstflextext {
-	border: 2px dashed #FF0000;
+.flextextcontainer1 {
+	display: inline-block;
+	border: 2px dashed;
 	border-radius: 5px;
 	margin-left: 50px;
 	margin-right: 50px;
@@ -170,137 +148,17 @@ body {
 	z-index: 4px;	
 }
 
-.firstflextextp {
-	color: #FF0000;
+.flextext1 {
 	font-size: 20px;
 	font-family: monospace;
 	z-index: 4;	
 }
 
-.secondflex {
-	position: absolute; 
-	scroll-snap-align: center;
-	scroll-behavior: smooth;
-	top: 220%;
-	left: 0;
-	width: 100%;
-	display: flex;
-	font-family: monospace;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	background-size: contain:
-    	background-repeat: no-repeat;
-	background-position: center;
-	z-index: 4;
-}
-
-.secondflextext {
-	border: 2px dashed yellow;
-	border-radius: 5px;
-	margin-left: 50px;
-	margin-right: 50px;
-	padding: 10px;
-	z-index: 4px;	
-}
-
-.secondflextextp {
-	color: yellow;
-	font-size: 20px;
-	font-family: monospace;
-	z-index: 4;	
-}
-
-
-.thirdflex {
-	position: absolute; 
-	scroll-snap-align: center;
-	scroll-behavior: smooth;
-	top: 400%;
-	left: 0;
-	width: 100%;
-	display: flex;
-	font-family: monospace;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	background-size: contain:
-    	background-repeat: no-repeat;
-	background-position: center;
-	z-index: 4;
-}
-
-.thirdflextext {
-	border: 2px dashed #00AEEF;
-	border-radius: 5px;
-	margin-left: 50px;
-	margin-right: 50px;
-	padding: 10px;
-	z-index: 4px;	
-}
-
-.thirdflextextp {
-	color: #00AEEF;
-	font-size: 20px;
-	font-family: monospace;
-	z-index: 4;	
-}
-
-.fourthflex {
-	position: absolute; 
-	scroll-snap-align: center;
-	scroll-behavior: smooth;
-	top: 600%;
-	left: 0;
-	width: 100%;
-	display: flex;
-	font-family: monospace;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	background-size: contain:
-    	background-repeat: no-repeat;
-	background-position: center;
-	z-index: 4;
-}
-
-.fourthflextext {
-	border: 2px dashed #00FF00;
-	border-radius: 5px;
-	margin-left: 50px;
-	margin-right: 50px;
-	padding: 10px;
-	z-index: 4px;	
-}
-
-.fourthflextextp {
-	color: #00FF00;
-	font-size: 20px;
-	font-family: monospace;
-	z-index: 4;	
-}
-
-.fifthflex {
-	position: absolute; 
-	top: 845%;
-	left: 0;
-	width: 100%;
-	display: flex;
-	font-family: monospace;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	background-size: contain:
-    	background-repeat: no-repeat;
-	background-position: center;
-	z-index: 4;
-}
-
-.fifthflextext {
+.flextextcontainer2 {
 	position: relative;
 	display: flex;
 	margin-top: 10px;
-	border: 2px dashed #FF0000;
+	border: 2px dashed;
 	border-radius: 5px;
 	margin-left: 50px;
 	margin-right: 50px;
@@ -308,8 +166,7 @@ body {
 	z-index: 4px;	
 }
 
-.fifthflextextp {
-	color: #FF0000;
+.flextext2 {
 	font-size: 20px;
 	margin-left: 5vw;
 	font-family: monospace;
@@ -335,15 +192,18 @@ body {
 	font-family: monospace;
 }
 
-.fleximgflex {
+.fleximgcontainer {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	z-index: 4;	
 }
 
 .fleximg {
 	max-width: 100%;
-	max-height: 50vh;
+	max-height: 100%;
+	align-items: center;
+	justify-content: center;
 	height: auto;
 	width: auto;
 }
@@ -385,39 +245,19 @@ abbr {
 	text-decoration: none;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 605px) {
+	.footer {
+		flex-direction: column;
+	}
 	.navbar {
-		flex-derection: column;
-		height: auto;
+		position: absolute;
+		flex-direction:column;
 	}
-	.navbaritem, .navbarbutton {
-		margin: 5px 5px;
+	.navbarbutton {
+		margin-bottom: 15px;
 	}
-	.foreground {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		z-index: 2;
+	.navbarlogo {
+		padding: 0px;
+		margin-top: 15px;
 	}
-
-	.transforeground {
-		display: inline-block;
-		height: 100%;
-		background-color: transparent;
-		width: 1px;
-		z-index: 2;
-	}
-
-	.blackforegroundright {
-		display: inline-block;
-		background-color: #000000;
-		height: 100%;
-		width: 100%;
-		z-index: 2;
-	}
-}
+ }
